--- a/tiny/cgi-bin/Makefile
+++ b/tiny/cgi-bin/Makefile
@@ -1,10 +1,11 @@
 CC = gcc
 CFLAGS = -O2 -Wall -I ..
+LIB = -lpthread
 
 all: adder
 
-adder: adder.c
-	$(CC) $(CFLAGS) -o adder adder.c
+adder: adder.c 
+	$(CC) $(CFLAGS) -o adder adder.c ../csapp.o $(LIB)
 
 clean:
 	rm -f adder *~
